# idyllic-python

./: .dockerignore  Dockerfile  Makefile  README.md  pyproject.toml  run.py
.github/workflows/: ci.yml  maintenance.yml  release.yml
src/idyllic_python/: __init__.py  main.py
tests/: conftest.py  test_app_integration.py  test_endpoints.py
